k8s/base/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-app-ingress
  namespace: my-app-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: express.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-app
                port:
                  number: 3000
